# fbuild

./: .coderabbit.yaml  .env  .gitignore  .rustfmt.toml  2026-06-21.db  CANCELLATION_IMPLEMENTATION.md  CLAUDE.md  CODEX.md  Cargo.toml  DEVELOPMENT.md  DONE.md  FASTLED_SUPPORT.md  LOOP.md  MANIFEST.in  PLAN.md  PLAN_QEMU_ESP32S3.md  README.md  RESULTS.md  SERIAL_MONITOR_API.md  _cargo  _rustc  _rustfmt  app.js  bench.config  build_backend.py  conftest.py  history.jsonl  ids.json  ids.txt  ids2.json  ids3.json  ids4.json  index.html  install  latest.json  lint  manifest.json  perf  publish  pyproject.toml  (+9 more)
bench/fastled-examples/: Cargo.toml  README.md
bench/fastled-examples/src/: README.md  build_comparison.rs  build_comparison_tests.rs  main.rs
ci/dev-tools/: README.md  pyproject.toml
crates/fbuild-broker/: Cargo.toml  README.md
crates/fbuild-broker/src/: lib.rs  protocol.rs  service.rs  session.rs
crates/fbuild-build/: Cargo.toml  README.md
crates/fbuild-build-engine/: Cargo.toml  README.md
crates/fbuild-build-engine/src/: arduino_props.rs  build_info.rs  compiler.rs  compiler_tests.rs  eh_frame_policy_compute.rs  flag_overlay.rs  framework_core_cache.rs  framework_libs.rs  lib.rs  linker.rs  package_override.rs  parallel.rs  script_runtime.rs  script_runtime_tests.rs  source_scanner.rs  zccache_embedded.rs
crates/fbuild-build-mcu/: Cargo.toml  README.md
crates/fbuild-build-mcu/src/: lib.rs
crates/fbuild-build/reference/: README.md
crates/fbuild-build/src/: README.md  build_fingerprint.rs  build_info.rs  build_output.rs  compile_backend.rs  compile_database.rs  compile_many.rs  compiler.rs  compiler_tests.rs  eh_frame_policy.rs  eh_frame_policy_compute.rs  flag_overlay.rs  framework_core_cache.rs  framework_libs.rs  lib.rs  linker.rs  lite_scons_harness.py  managed_zccache.rs  mcu_config.rs  parallel.rs  perf_log.rs  pipeline.rs  resolution.rs  script_runtime.rs  script_runtime_harness.py  script_runtime_tests.rs  source_scanner.rs  symbol_analyzer.rs  zccache.rs  zccache_embedded.rs
crates/fbuild-build/tests/: README.md  avr_build.rs  cache_survives_tar_extract.rs  compile_many_stage2_perf.rs  compile_many_two_stage.rs  eh_frame_strip_esp32.rs  esp32_build.rs  flag_escaping_lint.rs  lite_scons_acceptance.rs  nxplpc_build_flags.rs  nxplpc_core_compile_commands.rs  stm32_acceptance.rs  teensy30_acceptance.rs  teensy41_acceptance.rs  teensy_build.rs  teensylc_acceptance.rs  zccache_embedded_smoke.rs  zccache_hit_across_workspace_rename.rs
crates/fbuild-cli/: Cargo.toml  README.md  build.rs
crates/fbuild-cli/src/: README.md  daemon_client.rs  lib_select.rs  main.rs  mcp.rs  output.rs  update_check.rs
crates/fbuild-cli/tests/: README.md  bloat_esp32s3_fastled_master.rs  ci_command.rs  lib_select.rs  test_emu_exit_code.rs
crates/fbuild-config/: Cargo.toml  README.md
crates/fbuild-config/assets/: README.md
crates/fbuild-config/src/: README.md  board.rs  ini_parser.rs  lib.rs  mcu.rs  pio_env.rs  platform_packages.rs  sdkconfig.rs
crates/fbuild-core/: Cargo.toml  README.md
crates/fbuild-core/data/: README.md  usb-vids.proto.zstd
crates/fbuild-core/examples/: README.md  dump_usb_ids.rs
crates/fbuild-core/src/: README.md  build_log.rs  channel.rs  compiler_flags.rs  containment.rs  elapsed.rs  emulator.rs  env_namespace.rs  file_lock.rs  fs.rs  http.rs  install_status.rs  lib.rs  path.rs  process_identity.rs  response_file.rs  shell_split.rs  subprocess.rs  symbol_analysis.rs  time.rs
crates/fbuild-daemon/: Cargo.toml  README.md
crates/fbuild-daemon/running-process/: fbuild-daemon.servicedef.textproto.in
crates/fbuild-daemon/src/: README.md  context.rs  device_manager.rs  lib.rs  lock_models.rs  log_layer.rs  main.rs  models.rs  status_manager.rs  watch_set_cache.rs
crates/fbuild-daemon/tests/: README.md  build_streaming.rs  legacy_daemon_transition.rs  port_recovery.rs  process_containment.rs  test_emu_endpoint.rs
crates/fbuild-daemon/web/: README.md
crates/fbuild-deploy/: Cargo.toml  README.md
crates/fbuild-deploy/src/: README.md  avr.rs  esp32.rs  esp32_native.rs  firmware_ledger.rs  lib.rs  lpc.rs  lpc_debugger_reflash.rs  method_validation.rs  probe_rs.rs  reset.rs  rp2040.rs  rp2040_mount.rs  rp2040_picotool.rs  rp2040_target.rs  rp2040_topology.rs  size_check.rs  teensy.rs  wchisp.rs  wlink.rs
crates/fbuild-header-scan/: Cargo.toml  README.md
crates/fbuild-header-scan/benches/: README.md  scan_throughput.rs
crates/fbuild-header-scan/src/: README.md  lib.rs  scanner.rs  walker.rs
crates/fbuild-library-select/: Cargo.toml  README.md
crates/fbuild-library-select/benches/: README.md  resolve_cold.rs  resolve_warm.rs
crates/fbuild-library-select/src/: README.md  cache.rs  lib.rs
crates/fbuild-library-select/tests/: README.md  perf_tdd.rs  teensy41_ldf_diag.rs
crates/fbuild-packages/: Cargo.toml  README.md
crates/fbuild-packages-fetch/: Cargo.toml  README.md
crates/fbuild-packages-fetch/src/: cache.rs  cache_archive.rs  downloader.rs  extractor.rs  http.rs  install_lock.rs  lib.rs
crates/fbuild-packages/assets/: README.md  avr_frameworks.json
crates/fbuild-packages/src/: README.md  cache.rs  downloader.rs  extractor.rs  http.rs  install_lock.rs  lib.rs  library.rs  toolchain.rs
crates/fbuild-packages/tests/: README.md  disk_cache_schema_migration.rs  lnk_e2e.rs
crates/fbuild-paths/: Cargo.toml  README.md
crates/fbuild-paths/src/: README.md  (+3 more)
crates/fbuild-python/: Cargo.toml  README.md
crates/fbuild-serial/: Cargo.toml  README.md
crates/fbuild-test-support/: Cargo.toml  README.md
dylints/ban_direct_serialport/: Cargo.toml  README.md
dylints/ban_file_based_locks/: Cargo.toml  README.md
dylints/ban_manual_slash_normalize/: Cargo.toml  README.md
dylints/ban_print_in_production/: Cargo.toml  README.md
dylints/ban_process_exit_outside_main/: Cargo.toml  README.md
dylints/ban_raw_path_prefix_compare/: Cargo.toml  README.md
dylints/ban_raw_subprocess/: Cargo.toml  README.md
dylints/ban_runtime_new_outside_main/: Cargo.toml  README.md
dylints/ban_std_fs_canonicalize/: Cargo.toml  README.md
(+4878 files in other folders)
