[workspace]
resolver = "2"
members = [
    "crates/fbuild-core",
    "crates/fbuild-config",
    "crates/fbuild-paths",
    "crates/fbuild-packages",
    "crates/fbuild-serial",
    "crates/fbuild-build",
    "crates/fbuild-deploy",
    "crates/fbuild-daemon",
    "crates/fbuild-broker",
    "crates/fbuild-cli",
    "crates/fbuild-python",
    "crates/fbuild-test-support",
    "crates/fbuild-header-scan",
    "crates/fbuild-library-select",
    "bench/fastled-examples",
]
# Custom dylints have their own nightly toolchain pin (see
# `dylints/*/rust-toolchain.toml`) and must not be part of the
# stable workspace build — `cargo dylint --all` builds them with
# the pinned nightly via the discovery below. See #264.
exclude = ["dylints/ban_raw_subprocess"]

[workspace.metadata.dylint]
libraries = [{ path = "dylints/*" }]

[workspace.package]
version = "2.2.27"
edition = "2021"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastled/fbuild"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "process", "io-util", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }
semver = "1"
tokio-serial = "5"
serialport = { version = "4", default-features = false }
pyo3 = { version = "0.22", features = ["abi3-py310"] }
tempfile = "3"
filetime = "0.2"
sha2 = "0.10"
regex = "1"
walkdir = "2"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
xz2 = "0.1"
bzip2 = "0.5"
zstd = "0.13"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = "0.24"
async-trait = "0.1"
dashmap = "6"
blake3 = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
mimalloc = "0.1"
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "write"] }
rusqlite = { version = "0.31", features = ["bundled"] }
shell-words = "1"
bincode = "1"
# prost: hand-derived `#[derive(prost::Message)]` payload structs for the
# fbuild v1 broker request/response lane (no .proto/build.rs needed). Pinned
# to the version running-process 4.3.0 re-exports so the wire types stay
# compatible. See crates/fbuild-broker.
prost = "0.14"
zccache-artifact = "1.9"
rayon = "1"
tracing-test = "0.2"
# Terminal coloring for `fbuild build --shrink` reporting (FastLED/fbuild#493).
# Auto-disables on non-tty and respects `NO_COLOR`, so the same code is safe
# to call from anywhere — no `--color` flag plumbing needed.
owo-colors = "4"

# Process containment: all subprocess spawns the daemon performs (compilers,
# esptool, qemu, simavr, node, npm, …) and any grandchildren they fork must
# die with the daemon. See FastLED/fbuild#32.
# Migrated from `running-process-core 3.4` to `running-process 4.x` after
# the upstream mono-crate consolidation.
#
# v1 broker adoption (zackees/running-process#437 / FastLED/fbuild#510):
# `fbuild-broker` adopts the frozen v1 broker session API (`#433`) for daemon
# discovery + version negotiation, so we now enable the `client-async` feature
# (fbuild-daemon is a tokio runtime — `AsyncBrokerSession::adopt`). The
# `core` feature stays on for process containment. `RUNNING_PROCESS_DISABLE=1`
# still selects the legacy direct loopback-HTTP path (see fbuild-broker docs).
running-process = { version = "4.3.0", default-features = false, features = ["client-async"] }

[profile.dev]
debug = 0
