[workspace]
resolver = "2"
members = [
    "crates/fbuild-core",
    "crates/fbuild-config",
    "crates/fbuild-paths",
    "crates/fbuild-packages",
    "crates/fbuild-serial",
    "crates/fbuild-build",
    "crates/fbuild-deploy",
    "crates/fbuild-daemon",
    "crates/fbuild-cli",
    "crates/fbuild-python",
    "crates/fbuild-test-support",
    "crates/fbuild-header-scan",
    "crates/fbuild-library-select",
    "bench/fastled-examples",
]
# Custom dylints have their own nightly toolchain pin (see
# `dylints/*/rust-toolchain.toml`) and must not be part of the
# stable workspace build — `cargo dylint --all` builds them with
# the pinned nightly via the discovery below. See #264.
exclude = [
    "dylints/ban_raw_subprocess",
    "dylints/ban_std_pathbuf",
    "dylints/ban_unrooted_tempdir",
    "dylints/ban_direct_serialport",
    "dylints/ban_file_based_locks",
    "dylints/ban_deploy_tool_direct_invocation",
    "dylints/ban_process_exit_outside_main",
    "dylints/ban_unwrap_in_production",
    "dylints/cli_no_build_deploy_direct_use",
    "dylints/require_multi_thread_flavor_when_spawning",
    "dylints/ban_std_sync_mutex_in_async",
    # FastLED/fbuild#844 bridge sweep — 10 net-new lints landing
    # together with the matching internal bridge APIs.
    "dylints/ban_bare_reqwest",
    "dylints/ban_std_fs_in_async",
    "dylints/ban_tokio_fs_direct_import",
    "dylints/ban_std_thread_sleep",
    "dylints/ban_std_mpsc_in_async_reachable",
    "dylints/ban_tokio_mpsc_direct_import",
    "dylints/ban_std_fs_canonicalize",
    "dylints/ban_runtime_new_outside_main",
    "dylints/ban_poison_panic",
    "dylints/ban_print_in_production",
    # FastLED/fbuild#840 initializer-order sweep — convention-based
    # checks for env-var mutation and OnceLock installation outside
    # binary entry points. MIR-based dataflow check is a follow-up.
    "dylints/ban_env_var_set_after_import",
    "dylints/require_oncelock_install_before_use",
    # FastLED/fbuild#911 — bans hand-rolled '.replace(\\, /)'
    # backslash-to-slash rewrites on path-shaped strings, directing
    # callers at fbuild_core::path::NormalizedPath::display_slash().
    # Companion to ban_std_pathbuf. Filed after PRs #890 and #912 both
    # had to patch the same anti-pattern at yet another call site.
    "dylints/ban_manual_slash_normalize",
]

[workspace.metadata.dylint]
libraries = [{ path = "dylints/*" }]

[workspace.package]
version = "2.3.23"
edition = "2021"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastled/fbuild"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "process", "io-util", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }
semver = "1"
tokio-serial = "5"
serialport = { version = "4", default-features = false }
pyo3 = { version = "0.22", features = ["abi3-py310"] }
tempfile = "3"
filetime = "0.2"
sha2 = "0.10"
regex = "1"
walkdir = "2"
tree-sitter = "0.26.9"
tree-sitter-cpp = "0.23.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
xz2 = "0.1"
bzip2 = "0.5"
zstd = "0.13"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
futures = "0.3"
tokio-tungstenite = "0.24"
async-trait = "0.1"
dashmap = "6"
blake3 = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
mimalloc = "0.1"
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "write"] }
rusqlite = { version = "0.31", features = ["bundled"] }
shell-words = "1"
bincode = "1"
# USB VID:PID -> {vendor, product} name lookup. Bundles the linux-usb.org
# `usb.ids` snapshot at compile time into a `phf` perfect-hash table.
# Pure Rust, no libusb / no udev. Versioning scheme `1.YYYY.N` tracks
# upstream snapshots — `cargo update` pulls in new silicon. Tier-1 for
# `fbuild_core::usb::resolve()`; the tier-2 online overlay is fetched
# from the repo's `online-data` branch.
usb-ids = "1.2025"
# prost: hand-derived `#[derive(prost::Message)]` payload structs for the
# fbuild v1 broker request/response lane (no .proto/build.rs needed). Pinned
# to the version running-process 4.3.0 re-exports so the wire types stay
# compatible. See crates/fbuild-daemon/src/broker.
prost = "0.14"
# fbuild-daemon binds the running-process backend endpoint directly so the
# broker can verify and route to versioned daemon processes.
interprocess = "2.4.2"
rayon = "1"
tracing-test = "0.2"
# Terminal coloring for `fbuild build --shrink` reporting (FastLED/fbuild#493).
# Auto-disables on non-tty and respects `NO_COLOR`, so the same code is safe
# to call from anywhere — no `--color` flag plumbing needed.
owo-colors = "4"

# Process containment: all subprocess spawns the daemon performs (compilers,
# esptool, qemu, simavr, node, npm, …) and any grandchildren they fork must
# die with the daemon. See FastLED/fbuild#32.
# Migrated from `running-process-core 3.4` to `running-process 4.x` after
# the upstream mono-crate consolidation.
#
# v1 broker adoption (zackees/running-process#437 / FastLED/fbuild#510):
# `fbuild-daemon`'s `broker` module adopts the frozen v1 broker session API
# (`#433`) for daemon discovery + version negotiation, so we now enable the
# `client-async` feature (fbuild-daemon is a tokio runtime —
# `AsyncBrokerSession::adopt`). The `core` feature stays on for process
# containment. `RUNNING_PROCESS_DISABLE=1` still selects the legacy direct
# loopback-HTTP path (see crates/fbuild-daemon/src/broker).
running-process = { version = "4.5.7", default-features = false, features = ["client-async"] }

[profile.dev]
debug = 0
# Cargo's dev defaults: opt-level = 0 for first-party (fast compile +
# fast link), incremental = true (cargo + linker keep state across
# builds), codegen-units = 256 (parallel compile units). We accept
# those for our own crates so `pip install`/`uv sync` rebuilds finish
# quickly when iterating.

# Optimize third-party deps even in dev so runtime perf doesn't tank
# just because we want a fast local-rebuild loop. Cargo compiles each
# upstream crate exactly once and caches it, so this only costs the
# first build — every subsequent rebuild of fbuild's source is still
# the fast dev-profile path.
[profile.dev.package."*"]
opt-level = 3
debug = false
