[project]
name = "fbuild"
version = "2.2.28"
description = "PlatformIO-compatible embedded build tool (Rust implementation)"
readme = "README.md"
requires-python = ">=3.10"
# fbuild embeds its own pinned zccache (downloaded + managed internally by
# fbuild-build::managed_zccache) rather than declaring it as a Python
# dependency. Pinning zccache here forced every package sharing the venv to
# agree on one version; embedding the binary removes that conflict.
dependencies = []

# Console script: `fbuild` on PATH after `pip install .` execs the native
# binary that setup.py stages into ci/bin/fbuild[.exe]. See setup.py +
# ci/bin_launcher.py for the full wiring (#423).
[project.scripts]
fbuild = "ci.bin_launcher:main"

[dependency-groups]
dev = ["fbuild-dev-tools"]

[tool.uv.sources]
fbuild-dev-tools = { path = "ci/dev-tools", editable = true }

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ci"]
include-package-data = true

# Ship the native binary that setup.py's BuildWithCargo cmdclass stages
# into ci/bin/ during the build_py phase. Glob is broad enough to match
# fbuild + fbuild.exe across platforms.
[tool.setuptools.package-data]
ci = ["bin/fbuild*"]
