[project]
name = "fbuild-dev-tools"
version = "0.0.0"
description = "Repo-local Rust toolchain trampolines for fbuild development"
requires-python = ">=3.10"
dependencies = ["soldr>=0.7.0"]

[project.scripts]
cargo = "ci.trampoline:cargo"
rustc = "ci.trampoline:rustc"
rustfmt = "ci.trampoline:rustfmt"
clippy-driver = "ci.trampoline:clippy_driver"
run_fbuild = "ci.trampoline:run_fbuild"
run_fbuild_daemon = "ci.trampoline:run_fbuild_daemon"
publish = "ci.trampoline:publish"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
