[project]
name = "fbuild-dev-tools"
version = "0.0.0"
description = "Repo-local fbuild development helpers"
requires-python = ">=3.10"
dependencies = ["soldr>=0.7.4"]

[project.scripts]
run_fbuild = "ci.trampoline:run_fbuild"
run_fbuild_daemon = "ci.trampoline:run_fbuild_daemon"
publish = "ci.trampoline:publish"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
