[package]
name = "fbuild-broker"
description = "v1 running-process broker adoption for fbuild (service definition, cache manifest, session, request/response wire)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "fbuild_broker"
path = "src/lib.rs"

[dependencies]
fbuild-paths = { path = "../fbuild-paths" }
running-process = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
