[package]
name = "fbuild-build"
description = "Build orchestration, compilation, linking for all platforms (AVR, ESP32, RP2040, STM32, Teensy, WASM)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-config = { path = "../fbuild-config" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-library-select = { path = "../fbuild-library-select" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
object = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-cpp = { workspace = true }

# FastLED/fbuild#800 (Phase 4 stage 2 of #789): zccache embedded
# library is an unconditional dep. The wrapper-binary path
# (`crates/fbuild-build/src/managed_zccache.rs`, `zccache wrap …`
# child processes) was deleted in the same PR; there is no
# `--no-default-features` escape hatch.
#
# Pinned at the same revision soldr uses (`73d3f84`,
# zackees/soldr#994 + zccache#922/#923/#925/#926).
zccache = { git = "https://github.com/zackees/zccache", rev = "73d3f84542deb16f762352668f3f2a8fb407462a" }

[dev-dependencies]
filetime = { workspace = true }
fbuild-test-support = { path = "../fbuild-test-support" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
