[package]
name = "fbuild-build"
description = "Build orchestration, compilation, linking for all platforms (AVR, ESP32, RP2040, STM32, Teensy, WASM)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-config = { path = "../fbuild-config" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-library-select = { path = "../fbuild-library-select" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
object = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-cpp = { workspace = true }

# FastLED/fbuild#800 (Phase 4 stage 2 of #789): zccache embedded
# library is an unconditional dep. The wrapper-binary path
# (`crates/fbuild-build/src/managed_zccache.rs`, `zccache wrap …`
# child processes) was deleted in the same PR; there is no
# `--no-default-features` escape hatch.
#
# Pinned at zccache 1.12.14 (`4b13676`, the same revision soldr's
# `_vender/zccache` submodule uses). Bumps 1.12.11 -> 1.12.14 to pick
# up the embedded-path fixes: #950 (journal compile outcomes on the
# embedded path), #955/#957/#958 (daemon-deadlock/full-codegen fix +
# `run_cpu_blocking`), and #948 (mimalloc as sole allocator).
zccache = { git = "https://github.com/zackees/zccache", rev = "4b13676bb3a76c87d2272b2d9ccb76e821734762" }

[dev-dependencies]
filetime = { workspace = true }
fbuild-test-support = { path = "../fbuild-test-support" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
