[package]
name = "fbuild-cli"
description = "Command-line interface for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — distribution is PyPI + GitHub Releases;
# this member exists purely for internal compile parallelism. FastLED/fbuild#1008.
publish = false

[[bin]]
name = "fbuild"
path = "src/main.rs"

[dependencies]
fbuild-core = { path = "../fbuild-core" }
fbuild-build = { path = "../fbuild-build" }
fbuild-config = { path = "../fbuild-config" }
fbuild-deploy = { path = "../fbuild-deploy" }
fbuild-library-select = { path = "../fbuild-library-select" }
fbuild-packages = { path = "../fbuild-packages" }
fbuild-paths = { path = "../fbuild-paths" }
fbuild-serial = { path = "../fbuild-serial" }
serialport = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
running-process = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
owo-colors = { workspace = true }
semver = { workspace = true }
