[package]
name = "fbuild-config"
description = "PlatformIO INI parser, board config, MCU specs for fbuild"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fbuild-core = { path = "../fbuild-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
